--- a/docs/.vuepress/styles/palette.styl
+++ b/docs/.vuepress/styles/palette.styl
@@ -4,7 +4,7 @@
  * ref：https://v1.vuepress.vuejs.org/zh/config/#palette-styl
  */
 
-$accentColor = #673ab7
+$accentColor = #6633bb
 $textColor = #2c3e50
 $borderColor = #eaecef
 $codeBgColor = #282c34
